fix: 상세리뷰 작성 => 탈출순간 사진삭제 버튼 css:visible 적용

--- a/src/components/molecules/EscapeMoment/style.css
+++ b/src/components/molecules/EscapeMoment/style.css
@@ -1,8 +1,9 @@
-.moment-swiper {
+#moment-swiper {
   margin:0 ;
   width:100%;
+  overflow:visible;
 }
 
-.moment-slide {
+#moment-slide {
   width:auto ;
 }
